# tomenotas

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  gravar.sh  install.sh  ler.sh  listar.sh  pyproject.toml  tomenotas-hotkey-critical  tomenotas-hotkey-critical-read  tomenotas-hotkey-meeting  tomenotas-hotkey-read  tomenotas-hotkey-window  tomenotas-open  uninstall.sh
packaging/: build-deb.sh  tomenotas.desktop
src/tomenotas/: __init__.py  config.py  core.py  daemon.py  logs.py  migrations.py  notes.py  notes_db.py  notify.py  player.py  recorder.py  settings_window.py  shortcuts.py  status.py  transcriber.py  window.py
src/tomenotas/app/: __init__.py  alarm.py  core.py
src/tomenotas/domain/: __init__.py  errors.py  note.py  period.py  state.py
src/tomenotas/infra/: __init__.py  config.py  logs.py  meeting_recorder.py  migrations.py  notes_db.py  notify.py  player.py  recorder.py  shortcuts.py  sound.py  transcriber.py  voices.py  wakeword.py
src/tomenotas/ui/: __init__.py  daemon.py  settings_page.py  wakeword_model.py  window.py
tests/: test_alarm.py  test_architecture.py  test_config.py  test_core.py  test_domain.py  test_logs.py  test_meeting_recorder.py  test_migrations.py  test_notes.py  test_notes_db.py  test_notify.py  test_player.py  test_recorder.py  test_shortcuts.py  test_sound.py  test_status.py  test_transcriber.py  test_ui_smoke.py  test_voices.py  test_wakeword.py
training/: README.md  download_data.sh  setup.sh  tomenotas.yml  train.sh
