[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tomenotas"
version = "0.2.0"
description = "Assistente pessoal de notas de voz para Ubuntu/GNOME (STT/TTS offline)"
requires-python = ">=3.10"
# PyGObject (gi) vem do apt (python3-gi) via venv --system-site-packages,
# não do pip — compilar PyGObject via pip exige toolchain e headers extras.
dependencies = []

[project.scripts]
tomenotas-daemon = "tomenotas.daemon:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tomenotas --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
# daemon.py e window.py são a camada de cola GTK/AppIndicator/D-Bus: mantidas
# finas e burras (só delegam para o núcleo testado) e validadas manualmente —
# ver CLAUDE.md.
omit = ["*/daemon.py", "*/window.py"]
