[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tomenotas"
version = "1.3.0"
description = "Assistente pessoal de notas de voz para Ubuntu/GNOME (STT/TTS offline)"
requires-python = ">=3.10"
# PyGObject (gi) vem do apt (python3-gi) via venv --system-site-packages,
# não do pip — compilar PyGObject via pip exige toolchain e headers extras.
dependencies = []

[project.scripts]
tomenotas-daemon = "tomenotas.ui.daemon:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tomenotas --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
# ui/ é a camada de cola GTK/AppIndicator/D-Bus: mantida fina e burra (só
# delega para o núcleo testado) e validada manualmente — ver CLAUDE.md.
omit = ["*/ui/*"]
